--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -767,7 +767,7 @@
   justify-content: center;
   padding: 0 2rem;
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 0 auto 6px auto;
   min-height: 5rem;
 }
 
